# sagan

./: .gitmodules  Dockerfile  README.md  deployment.yaml  frontend-config.yaml  gateway.yaml  gcp-backend-policy.yaml  httproute.yaml  ingress.yaml  job.yaml  lifecycle.json  local-deployment.yaml  local-job.yaml  local-k8s-rbac.yaml  local-pvc.yaml  managed-cert.yaml  prod-deployment.yaml  pvc.yaml  requirements.txt  setup.sh  skaffold.yaml  test_connection.py
app/: main.py
app/backend/: Dockerfile  gke-main.py  local-main.py  main.py  pyproject.toml  requirements.txt  train_job.py
app/cosmosis/: .gitignore  README.md  dataset.py  experiment.ipynb  gpt_experiment.ipynb  learning.py  model.py  requirements.txt  setup_notes.txt
app/frontend/: .dockerignore  Dockerfile  main.py  pyproject.toml
app/gpt/: README.md  dataset.py  environment.yml  experiment.ipynb  requirements.txt  setup_notes.txt
k8s/: deployment.yaml  gcp-backend-policy.yaml  job.yaml  namespace.yaml  routes.yaml
local/: local-deployment.yaml  local-gateway.yaml  local-job.yaml  local-skaffold.yaml  pvc.yaml
sql_app/: database.py  main.py
