[project]
name = "sagan-backend"
version = "0.1.0"
description = "pytorch cpu only"
readme = "README.md"
requires-python = ">=3.11,<3.14" 
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.6.0",
    "anyio==4.10.0",
    "backports-zstd==1.3.0",
    "brotli==1.2.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.4",
    "click==8.2.1",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "dnspython==2.8.0",
    "email-validator==2.3.0",
    "fastapi==0.128.0",
    "fastapi-cli==0.0.20",
    "filelock==3.20.0",
    "fonttools==4.61.1",
    "fsspec==2025.12.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "h5py>=3.15.1",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.11",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "kiwisolver==1.4.9",
    "kubernetes>=35.0.0",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "munkres==1.1.4",
    "networkx==3.6.1",
    "numpy==2.3.5",
    "packaging==25.0",
    "pandas==3.0.1",
    "pillow==11.3.0",
    "pip==26.0.1",
    "pydantic==2.12.4",
    "pydantic-core==2.41.5",
    "pydantic-extra-types==2.11.0",
    "pydantic-settings==2.12.0",
    "pygments==2.19.2",
    "pyparsing==3.3.2",
    "pyside6==6.7.2",
    "pysocks==1.7.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.22",
    "pyyaml==6.0.3",
    "regex==2026.2.19",
    "requests==2.32.5",
    "rich==14.2.0",
    "rich-toolkit==0.17.1",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "setuptools==80.10.2",
    "shellingham==1.5.4",
    "shiboken6==6.7.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.47.3",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tiktoken==0.12.0",
    "torch==2.10.0+cpu",
    "torcheval==0.0.7",
    "torchvision==0.25.0+cpu",
    "tornado==6.5.4",
    "typer==0.20.0",
    "typer-slim==0.20.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "unicodedata2==17.0.1",
    "urllib3==2.6.3",
    "uv==0.10.6",
    "uvicorn==0.40.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websockets==15.0.1",
    "wheel==0.46.3",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

